<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/search"
        android:id="@+id/search_op"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView">
    </item>

    <item
        android:title="@string/sort_by"
        android:id="@+id/sort_by_op"
        app:showAsAction="never">
        <menu>
            <item
                android:title="@string/higher_priority"
                android:id="@+id/higher_priority_op"
                app:showAsAction="never">
            </item>

            <item
                android:title="@string/lower_priority"
                android:id="@+id/lower_priority_op"
                app:showAsAction="never">
            </item>
        </menu>
    </item>

    <item
        android:title="@string/settings"
        android:id="@+id/setting_op"
        app:showAsAction="never">
    </item>

    <item
        android:title="@string/logout"
        android:id="@+id/main_logout"
        app:showAsAction="never">
    </item>

</menu>