<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4895ED"
            android:padding="8dp">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toStartOf="@+id/deleteButoon"
                android:text="@string/title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/deleteButoon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_baseline_delete"
                android:contentDescription="@string/imgtodo" />

            <TextView
                android:id="@+id/textViewShortDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewTitle"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/textViewDater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewShortDesc"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:focusable="true"
                android:inputType="date"
                android:text="@string/_01_01_2021"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="TextViewEdits" />

            <TextView
                android:id="@+id/textViewTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewShortDesc"
                android:layout_centerInParent="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/textViewDater"
                android:clickable="true"
                android:focusable="true"
                android:inputType="time"
                android:text="@string/_06_00_am"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="TextViewEdits" />

            <TextView
                android:id="@+id/textViewCurrentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewShortDesc"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@+id/textViewCurrentTime"
                android:clickable="true"
                android:focusable="true"
                android:inputType="date"
                android:text="@string/_01_01_2021"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="TextViewEdits" />

            <TextView
                android:id="@+id/textViewCurrentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewShortDesc"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                android:focusable="true"
                android:inputType="time"
                android:text="@string/_06_00_am"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="TextViewEdits" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>